Thu Jun  4 10:17:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.cpp:
          Do better cleanup, check for nil, use the correct wait() methods

        * orbsvcs/tests/Notify/Bug_3646b_Regression/server.cpp:
        * orbsvcs/tests/Notify/Bug_3646c_Regression/server.cpp:
          Use a loop instead of duplicated code

        * orbsvcs/tests/Notify/Bug_3646d_Regression/Bug_3646d_Regression.mpc:
          We don't need a consumer

        * orbsvcs/tests/Notify/Bug_3646d_Regression/Consumer.cpp:
          Deleted from the repository

        * orbsvcs/tests/Notify/Bug_3646d_Regression/run_test.pl:
          Simplified

Thu Jun  4 09:13:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.cpp:
        * orbsvcs/Notify_Service/Notify_Service.h:
          Set the ORB in the worker to nil and also cancel the timer
          when we don't need it anymore

Thu Jun  4 07:21:46 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_3676_Regression/Bug_3676_Regression.mpc:

          Properly fixed mpc which requires corba_messaging.

Thu Jun  4 00:33:14 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Compression/Base_Compressor.cpp:
          It seems the syntax of '<::' or '<:' is converted to '[' by the
          compiler or preprocessor. Changing the syntax to be '< ::'
          resolves that.

Wed  Jun  3 12:54:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.cpp:
          Make sure we have use the name service before using it and don't
          use asserts

Wed  Jun  3 12:30:50 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Incoming_Message_Stack.h:
          Updated for CB2009 Update 3

Wed Jun  3 12:16:21  2009  Marcel Smit  <msmit@remedy.nl>

        * tao/ZIOP/ZIOP.cpp
        * tao/ZIOP/ZIOP.h
          Applied ZIOP beta 2 spec. Compression ratio is defined